# ruuvi-home

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AI_CODING_GUIDELINES.md  DATABASE_ALTERNATIVES.md  DATABASE_TESTING_GUIDE.md  MILESTONES.md  PLAN.md  POSTGRES_MIGRATION_GUIDE.md  README.md  README_AI_WORKFLOW.md  STORAGE_ANALYSIS.md  activate-venv.sh  docker-compose-test.yaml  docker-compose.override.yml  docker-compose.production.yaml  docker-compose.registry.yaml  docker-compose.yaml  setup-venv.sh
.github/workflows/: ci-cd.yml  deploy.yml
.zed/: settings.json
backend/: .dockerignore  CI_ALIGNMENT_SUMMARY.md  Cargo.toml  LINTING.md  LOCAL_CI_SETUP.md  Makefile  README.md  clippy.toml  run-local-clippy.sh  rustfmt.toml
backend/config/: sensors.json
backend/docs/: RUST_STANDARDS.md
backend/scripts/: test.sh
docker/: api-server.Dockerfile  build-service.sh  frontend.Dockerfile  log-service.Dockerfile  mqtt-reader.Dockerfile  rust-service.Dockerfile  user-service.Dockerfile
docker/mosquitto/config/: mosquitto-simple.conf  mosquitto.conf
docker/mqtt-simulator/: .env.example  Dockerfile  Makefile  README.md  requirements.txt  run_tests.sh  simulator.py
docker/mqtt-simulator/tests/: __init__.py  conftest.py  test_simulator.py
docker/timescaledb/: 001_timescaledb_tune.sh  init-timescaledb.sql  migrate.sh
docker/timescaledb/migrations/: 20241202090000_add_sensor_metadata.sql  README.md
docs/: AI_VALIDATION_GUIDE.md  DEPLOYMENT.md  GITHUB_SECRETS.md  PRODUCTION_DEPLOYMENT.md
frontend/: .dockerignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json  robots.txt
frontend/src/: App.smoke.test.tsx  App.test.tsx  App.tsx  index.css  setupTests.ts  test-utils.tsx
frontend/src/components/: ChartControls.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  SensorCard.tsx  SensorChart.tsx
frontend/src/components/overview/: NavigationDrawer.tsx  OverviewHeader.tsx  SensorGrid.tsx  WarningStatus.tsx  chartConfig.ts  useChartData.ts
frontend/src/services/: api.test.ts  api.ts  hooks.ts
frontend/src/views/: Dashboard.tsx  Overview.tsx  SensorDetail.tsx
scripts/: ai-validate.sh  build.sh  check-lints.sh  deploy-production.sh  deploy.sh  dev.sh  docker-build-fix.sh  fix-pi-deployment.sh  mqtt-listener.py  pre-commit-hook.sh  quick-fix-passwords.sh  run-tests.sh  setup-dev.sh  setup-pi.sh  test-api.sh  test-frontend.sh  test-migrations.sh  update-database.sh  validate-deployment.sh  verify-frontend-build.sh
scripts/setup-pi/: README.md  config.yaml  demo-auto-repo.sh  diagnose-docker.sh  diagnose-packages.sh  fix-systemd-docker.sh  generate-local-certs.sh  generator.py  migrate-passwords.sh  setup-pi.sh  show-final-setup.sh  show-github-webhook-config.sh  test-deployment-modes.sh  test-network-connectivity.sh  test-repo-detection.sh  test-user-detection.sh  test-webhook-https.sh  update-docker.sh
scripts/setup-pi/config/: setup.env
scripts/setup-pi/lib/: config.sh  docker-compat.sh  logging.sh  validation.sh
scripts/setup-pi/modules/: 00-validation.sh  01-system-setup.sh  02-docker-setup.sh  03-directories.sh  04-file-generation.sh  05-systemd-services.sh  06-backup-system.sh  07-monitoring.sh  08-ssl-setup.sh
scripts/setup-pi/templates/: deploy.sh.j2  docker-compose.yml.j2  env.j2  ruuvi-home.service.j2  ruuvi-webhook.service.j2  show-credentials.sh.j2  webhook.py.j2  webhook.py.template
tests/: api_integration_test.py  requirements.txt  run_tests.sh
